# workset

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  ci-private-submodules.md
src/mypackage/: __init__.py  cli.py  package.py
src/workset/: __init__.py  cli.py  config.py  core.py  env.py  git.py  paths.py
templates/licenses/: Apache-2.0  README.md
tests/: test_cli.py  test_config.py  test_env.py  test_git.py  test_package.py  test_paths.py
